--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,12 @@ task clean(type: Delete) {
 }
 
 ext{
-    supportLibraryVersion = '27.1.1'
+    supportLibraryVersion = '28.0.0'
     constraintLibraryVersion = '1.1.3'
 
     testRunnerVersion = '1.0.2'
     espressoCoreVersion = '3.0.2'
+
+    archLifecycleVersion = '1.1.1'
 
 }
